RPS page fix
[FEAT] 	navbar always stays on top
[DESIGN] navbar update
[FIX] 	unwanted extra spaces
[FIX] 	RPS page too big

--- a/Content/bootstrap.css
+++ b/Content/bootstrap.css
@@ -1130,7 +1130,7 @@ img {
 .img-thumbnail {
   display: inline-block;
   max-width: 100%;
-  height: ;
+  height: auto;
   padding: 2px;
   line-height: 1.42857143;
   /*background-color: #fff;*/
